--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://enes9103.github.io/036_React_Reviews_Card/",
   "name": "reviews",
   "version": "0.1.0",
   "private": true,
@@ -18,9 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
